--- a/HomeWork02/index.html
+++ b/HomeWork02/index.html
@@ -3,7 +3,7 @@
 <head>
 	<title>Shopping List Check Off</title>
 	<meta charset="utf-8">
-	<script src="angular.js"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.6/angular.js"></script>
 	<script src="app.js"></script>
 	<style>
 #bigbox1 {width: 650px;}
