--- a/index.html
+++ b/index.html
@@ -3,6 +3,17 @@
   <head>
     <meta charset="utf-8">
     <title>Hello Coursera</title>
+	<script>
+(function () {
+	// Check for the various File API support.
+if (window.File && window.FileReader && window.FileList && window.Blob) {
+  // Great success! All the File APIs are supported.
+	alert('The file apis are fully supported in this browser');
+} else {
+  alert('The File APIs are not fully supported in this browser.');
+}
+})();
+</script>
   </head>
   <body>
     <h1>Hello Coursera Friends<h1>
